# FSTTM

./: .gitignore  LICENSE  README.md  chat.py  config.sample.yaml  fsttm.py  kmain.py  main.py  mic_vad.py  mic_vad_thread.py  pyproject.toml  requirements.txt  scratch.py  speech_to_text.py  text_to_speech.py  tts.py  utils.py
fsttm/: config.py  conversation.py  fsttm.py  llama.py  rhvoice.py  server.py  trace.py  whisper.py
gpt_fsttm_server/: config.py  conversation.py  ears.py  fsttm.py  llama.py  llama_adapter.py  mic_vad.py  perception.py  rhvoice.py  server.py  utils.py  whisper.py
models/: list.txt
scripts/: async_pr.py  async_q.py  asyncio_from_observable.py  auto.py  backpreasure.py  cancel_echo.sh  check_mic_vad2wisper.py  check_whisper.py  common.py  dialog.py  dialog_brocker.py  http_echo_server.py  llama_cpp_bringup.py  low_level_api_chat_cpp.py  observebel_from_asyncio.py  phi.py  sdl_out.py  voice_out_server.py
src/: __init__.py  fsttm.py
tests/: config_test.py  conftest.py  fsttm_test.py  reactiveX.py  scratch.py  uterances.sh
